@@ -1,20 +1,19 @@
-<?xml version="1.0" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 20010904//EN"
-"http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd"
-[
- <!ATTLIST svg
-  xmlns:xlink CDATA #FIXED "http://www.w3.org/1999/xlink">
-]>
-<!-- Created with Sodipodi ("http://www.sodipodi.com/") -->
+"http://www.w3.org/TR/2001/REC-SVG-20010904/DTD/svg10.dtd">
+<!-- Created with Inkscape ("http://www.inkscape.org/") -->
 <svg
    id="svg559"
-   sodipodi:version="0.28pre2"
+   sodipodi:version="0.32"
    width="600pt"
    height="500pt"
-   sodipodi:docname="about.svg"
+   sodipodi:docname="/projects/mental/cvs/sf-inkscape-inkscape/glade/about_svg.tmpl"
    xmlns="http://www.w3.org/2000/svg"
    xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-   xmlns:xlink="http://www.w3.org/1999/xlink">
+   xmlns:xlink="http://www.w3.org/1999/xlink"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   inkscape:version="0.37cvs"
+   sodipodi:docbase="/projects/mental/cvs/sf-inkscape-inkscape/glade">
   <defs
      id="defs561">
     <linearGradient
@@ -108,24 +107,19 @@
      style="fill:black;stroke:none;font-family:Helvetica;font-style:normal;font-weight:normal;font-size:20;text-anchor:start;writing-mode:lr;fill-opacity:1;stroke-opacity:1;stroke-width:1pt;stroke-linejoin:miter;stroke-linecap:butt;"
      x="534.620995"
      y="87.281342"
-     id="text23">
-    <tspan
-       x="534.621"
-       y="87.2813"
+     id="text23"><tspan
+       x="534.620972"
+       y="87.2813416"
        sodipodi:role="line"
-       id="tspan47">
-[% Contributors %]</tspan>
-  </text>
+       id="tspan47">[% Contributors %]</tspan></text>
   <text
-     style="fill:#ffffff;stroke:none;font-family:New Century Schoolbook;font-style:normal;font-weight:bold;font-size:36;text-anchor:start;writing-mode:lr;fill-opacity:1;stroke-opacity:1;stroke-width:1pt;stroke-linejoin:miter;stroke-linecap:butt;"
-     x="125.728947"
+     style="fill:#ffffff;stroke:none;font-family:Arial;font-style:normal;font-weight:bold;font-size:36;text-anchor:middle;writing-mode:lr;fill-opacity:1;stroke-opacity:1;stroke-width:1pt;stroke-linejoin:miter;stroke-linecap:butt;"
+     x="246.201307"
      y="502.733246"
-     id="text26">
-    <tspan
-       x="125.729"
-       y="502.733"
+     id="version"
+     sodipodi:linespacing="100%"><tspan
+       x="246.201309"
+       y="502.733246"
        sodipodi:role="line"
-       id="tspan49">
-[% Release %]</tspan>
-  </text>
+       id="tspan588">[% Release %]</tspan></text>
 </svg>
